--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "knex": "^3.1.0",
     "lucide-react": "^0.368.0",
     "next": "14.2.1",
     "pg": "^8.11.5",
