--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "jose": "^5.2.4",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.368.0",
